Add createOrUpdateOpeningTimes parts
