# src/controllers/BranchController.ts
@@ -5,9 +5,9 @@ import { ForbiddenError, UnauthorizedError } from "../exceptions/AuthError";
 import { PermissionScope, RolesEnum } from "../types/Enums";
 import { UUID } from "../types/TypeAliases";
 import BranchService from "../services/BranchService";
-import { AddressCompactIn, BranchCompleteOut, UpdateBranchCompactIn } from "../types/RestaurantTypes";
+import { AddressCompactIn, AddressCompleteOut, BranchCompleteOut, OpeningTimesCompactIn, OpeningTimesCompleteOut, UpdateBranchCompactIn } from "../types/RestaurantTypes";
 import { BranchNotFound } from "../exceptions/NotFoundError";
-import { BranchValidationError } from "../exceptions/ValidationError";
+import { AddressValidationError, BranchValidationError, OpeningTimesValidationError } from "../exceptions/ValidationError";
 
 @Route('/branches')
 @Tags('Branch')
@@ -46,11 +46,12 @@ export class BranchController extends BaseController {
   }
   
   /**
-   * Create an address for a branch. Overwrite if it called twice.
+   * Add an address for a branch. Overwrite if it called twice.
    */
   @Response<ForbiddenError>(403, 'Access Denied. You are not authorized to perform this action.')
   @Response<UnauthorizedError>(401, 'Unauthorized user.')
   @Response<BranchNotFound>(404, '4049 BranchNotFound')
+  @Response<AddressValidationError>(422, '42210 AddressValidationError')
   @SuccessResponse(201, 'Address created successfully.')
   @Security('', [RolesEnum.RestaurantOwner])
   @Post('/{branchId}/address')
@@ -58,8 +59,27 @@ export class BranchController extends BaseController {
     @Path() branchId: UUID,
     @Body() body: AddressCompactIn,
     @Request() req?: express.Request
-  ) {
+  ): Promise<AddressCompleteOut> {
     this.checkPermission(req?.session.user, PermissionScope.Branch, branchId);
     return BranchService.createOrUpdateAddress(branchId, body);
+  }
+
+  /**
+   * Add an opening times for a branch. Overwrite if it called twice.
+   */
+  @Response<ForbiddenError>(403, 'Access Denied. You are not authorized to perform this action.')
+  @Response<UnauthorizedError>(401, 'Unauthorized user.')
+  @Response<BranchNotFound>(404, '4049 BranchNotFound')
+  @Response<OpeningTimesValidationError>(422, '42211 OpeningTimesValidationError')
+  @SuccessResponse(201, 'Opening times created successfully.')
+  @Security('', [RolesEnum.RestaurantOwner])
+  @Post('/{branchId}/opening-times')
+  async createOrUpdateOpeningTimes(
+    @Path() branchId: UUID,
+    @Body() body: OpeningTimesCompactIn,
+    @Request() req?: express.Request
+  ): Promise<OpeningTimesCompleteOut> {
+    this.checkPermission(req?.session.user, PermissionScope.Branch, branchId);
+    return BranchService.createOrUpdateOpeningTimes(branchId, body);
   }
 }
